<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingTop="8dp">

    <EditText
        android:id="@+id/port_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_border"
        android:hint="@string/tcp_port_label"
        android:inputType="number"
        android:padding="12dp" />

    <EditText
        android:id="@+id/timeout_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/edit_text_border"
        android:hint="@string/tcp_timeout_label"
        android:inputType="number"
        android:padding="12dp" />

    <ImageButton
        android:id="@+id/btn_remove"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/remove"
        android:src="@drawable/ic_remove"
        app:tint="?attr/colorError" />
</LinearLayout>