<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:paddingLeft="8dp"
        android:paddingBottom="6dp"
        android:text="@string/number_of_pings_hint"
        android:textColor="?attr/colorOnSurface" />

    <EditText
        android:id="@+id/icmp_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:hint="@integer/icmp_count_default"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="?attr/colorOnSurface" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:paddingLeft="8dp"
        android:paddingTop="6dp"
        android:text="@string/timeout_ms_hint"
        android:textColor="?attr/colorOnSurface" />

    <EditText
        android:id="@+id/icmp_timeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:hint="@integer/icmp_timeout_default"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="?attr/colorOnSurface" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:paddingLeft="8dp"
        android:paddingTop="6dp"
        android:text="@string/packet_size_bytes_hint"
        android:textColor="?attr/colorOnSurface" />

    <EditText
        android:id="@+id/icmp_packet_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:hint="@integer/icmp_packet_size_default"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="?attr/colorOnSurface" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:paddingLeft="8dp"
        android:paddingTop="6dp"
        android:text="@string/threads_hint"
        android:textColor="?attr/colorOnSurface" />

    <EditText
        android:id="@+id/icmp_threads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:hint="@integer/icmp_threads_default"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="?attr/colorOnSurface" />

</LinearLayout>